--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@ffmpeg/ffmpeg": "^0.10.1",
     "@ffmpeg/util": "^0.12.2",
     "@neondatabase/serverless": "^1.0.1",
