--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/accessibility": "^3.1.1",
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
     "@ffmpeg/util": "^0.12.2",
     "@neondatabase/serverless": "^1.0.1",
@@ -26,9 +28,9 @@
     "next": "15.4.1",
     "postcss": "^8.5.6",
     "postgres": "^3.4.7",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
