--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ffmpeg/util": "^0.12.2",
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vercel/blob": "^1.1.1",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
